--- a/css/style.css
+++ b/css/style.css
@@ -4145,7 +4145,7 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  padding: 0 115px 80px;
+  padding: 0 140px 80px;
   flex-direction: column;
   gap: 80px;
 }
@@ -4229,14 +4229,14 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: calc(100% + 52px);
+  width: calc(100% + 78px);
   height: max-content;
   max-height: 0;
-  padding: 0 55px;
+  padding: 0 80px;
   flex-wrap: wrap;
   gap: 5px 10px;
   position: absolute;
-  left: -53px;
+  left: -79px;
   top: 100%;
   z-index: 10;
   background-color: var(--bg);
@@ -4248,7 +4248,7 @@ html.has-scroll-dragging {
 
 .projects__filter_sublist.active {
   max-height: 1000px;
-  padding: 20px 55px;
+  padding: 20px 80px 40px;
   z-index: 11;
   border-bottom: 1px solid var(--border);
 }
@@ -4322,7 +4322,6 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   width: 50%;
-  padding: 0 0 0 40px;
   align-items: center;
   justify-content: space-between;
   gap: 40px;
@@ -4330,7 +4329,6 @@ html.has-scroll-dragging {
 
 .projects__head,
 .projects__right {
-  padding: 0 0 0 30px;
   opacity: 0;
   -webkit-transform: translateY(30px);
   transform: translateY(30px);
@@ -4339,7 +4337,9 @@ html.has-scroll-dragging {
 }
 
 .loaded .projects__flex.animate .projects__head,
-.loaded .projects__flex.animate .projects__right {
+.loaded .projects__flex.animate .projects__right,
+.loaded .projects__all_flex.animate .projects__head,
+.loaded .projects__all_flex.animate .projects__right {
   opacity: 1;
   -webkit-transform: translateY(0px);
   transform: translateY(0px);
@@ -4347,9 +4347,30 @@ html.has-scroll-dragging {
   transition-delay: 0.1s;
 }
 
-.loaded .projects__flex.animate .projects__right {
+.loaded .projects__flex.animate .projects__right,
+.loaded .projects__all_flex.animate .projects__right {
   -webkit-transition-delay: 0.3s;
   transition-delay: 0.3s;
+}
+
+.projects__filter {
+  opacity: 0;
+  position: relative;
+  top: 30px;
+  -webkit-transition: opacity 0.3s linear, top 0.2s linear;
+  transition: opacity 0.3s linear, top 0.2s linear;
+}
+
+.loaded .projects__all_flex.animate .projects__filter {
+  opacity: 1;
+  top: 0px;
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+
+.loaded .projects__all_flex.animate .projects__filter {
+  -webkit-transition-delay: 0.5s;
+  transition-delay: 0.5s;
 }
 
 .projects__list {
@@ -4362,9 +4383,6 @@ html.has-scroll-dragging {
 
 .projects__item {
   width: 50%;
-}
-
-.projects__item {
   opacity: 0;
   -webkit-transform: translateY(30px);
   transform: translateY(30px);
@@ -4376,8 +4394,16 @@ html.has-scroll-dragging {
   opacity: 1;
   -webkit-transform: translateY(0px);
   transform: translateY(0px);
-  -webkit-transition-delay: calc(var(--inc-step)*0.1s);
-  transition-delay: calc(var(--inc-step)*0.1s);
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+
+.loaded .projects__item.animate:nth-child(2n) {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
 }
 
 .projects__item:nth-child(1n) {
@@ -7609,15 +7635,15 @@ html.has-scroll-dragging {
     padding: 140px 0 60px;
   }
   .projects__all_flex {
-    padding: 0 90px 60px;
+    padding: 0 120px 60px;
   }
   .projects__filter_sublist {
-    width: calc(100% + 28px);
-    padding: 0 30px;
-    left: -29px;
+    width: calc(100% + 58px);
+    padding: 0 60px;
+    left: -59px;
   }
   .projects__filter_sublist.active {
-    padding: 20px 30px;
+    padding: 20px 60px 30px;
   }
   .project_phone_flex {
     padding: 60px;
@@ -7666,9 +7692,6 @@ html.has-scroll-dragging {
   }
   .projects__filter_list {
     gap: 10px 30px;
-  }
-  .projects__right {
-    padding: 0 0 0 30px;
   }
   .project_top__shadow .project_top__block {
     padding: 140px 0 60px;
