--- a/css/style.css
+++ b/css/style.css
@@ -738,6 +738,7 @@ section {
 }
 
 .header__nav_item.active .header__nav_link .text .text__rotate span,
+.header__set_language_btn.active .text .text__rotate span,
 .text:hover .text__rotate span {
   -webkit-transform: translateY(-100%);
   transform: translateY(-100%);
@@ -940,8 +941,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 25px;
-  height: 25px;
+  font-weight: 600;
   -webkit-transition: color 0.3s linear;
   transition: color 0.3s linear;
 }
@@ -1333,8 +1333,8 @@ html.has-scroll-dragging {
 }
 
 .header__burger {
-  width: 44px;
-  height: 44px;
+  width: 40px;
+  height: 40px;
   opacity: 1;
   overflow: hidden;
   position: absolute;
@@ -1390,12 +1390,12 @@ html.has-scroll-dragging {
 
 .header__burger span:nth-child(1),
 .header__burger span:nth-child(2) {
-  bottom: 28px;
+  bottom: 24px;
 }
 
 .header__burger span:nth-child(3),
 .header__burger span:nth-child(4) {
-  bottom: 18px;
+  bottom: 14px;
 }
 
 .header__burger.active span:nth-child(1),
@@ -1412,22 +1412,22 @@ html.has-scroll-dragging {
 
 .header__burger.active span:nth-child(1) {
   left: 3.5px;
-  bottom: 29px;
+  bottom: 26px;
 }
 
 .header__burger.active span:nth-child(2) {
   left: calc(50% - 3.5px);
-  bottom: 29px;
+  bottom: 26px;
 }
 
 .header__burger.active span:nth-child(3) {
   left: 3.5px;
-  bottom: 14px;
+  bottom: 13px;
 }
 
 .header__burger.active span:nth-child(4) {
   left: calc(50% - 3.5px);
-  bottom: 14px;
+  bottom: 13px;
 }
 
 .header__name {
@@ -1735,8 +1735,9 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
+  max-width: 1350px;
   min-height: calc(var(--height) - 80px);
-  padding: 60px 240px;
+  padding: 60px 80px;
   flex-direction: column;
   justify-content: center;
   gap: 110px;
@@ -2060,12 +2061,16 @@ html.has-scroll-dragging {
   opacity: 0;
   -webkit-transition: max-width 0.2s linear, opacity 0.2s linear;
   transition: max-width 0.2s linear, opacity 0.2s linear;
+  -webkit-transition-delay: 0s, 0s;
+  transition-delay: 0s, 0s;
   overflow: hidden;
 }
 
 .header__set_language_control.active {
   max-width: 100px;
   opacity: 1;
+  -webkit-transition-delay: 0.2s, 0.2s;
+  transition-delay: 0.2s, 0.2s;
 }
 
 .header__set_language {
@@ -2077,13 +2082,33 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
-  width: 16.67px;
-  height: 16.67px;
+  height: 24px;
+  align-items: center;
 }
 
 .header__set_language_icon svg {
-  width: 16.67px;
-  height: 16.67px;
+  width: 24px;
+  height: 24px;
+}
+
+.header__set_language_icon p {
+  max-width: 0px;
+  margin: 0;
+  opacity: 0;
+  font-weight: 600;
+  -webkit-transition: opacity 0.2s linear, max-width 0s, margin 0s;
+  transition: opacity 0.2s linear, max-width 0s, margin 0s;
+  -webkit-transition-delay: 0s, 0.2s, 0.2s;
+  transition-delay: 0s, 0.2s, 0.2s;
+  overflow: hidden;
+}
+
+.header__set_language_icon.active p {
+  max-width: 1000px;
+  margin: 0 0 0 10px;
+  opacity: 1;
+  -webkit-transition-delay: 0.2s, 0.2s, 0.2s;
+  transition-delay: 0.2s, 0.2s, 0.2s;
 }
 
 /* end header__nav */
@@ -5345,6 +5370,22 @@ html.has-scroll-dragging {
   max-width: 200px;
 }
 
+.team_slider__swiper {
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+  transform: translateY(30px);
+  -webkit-transition: opacity 0.3s linear, -webkit-transform 0.2s linear;
+  transition: opacity 0.3s linear, transform 0.2s linear;
+}
+
+.loaded .team_slider__swiper.animate {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+
 .team_slider__desc {
   max-width: 100%;
 }
@@ -5363,6 +5404,29 @@ html.has-scroll-dragging {
 .team_slider__info_left,
 .team_slider__info_right {
   width: calc(50% - 20px);
+}
+
+.team_slider__info_left,
+.team_slider__info_right {
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+  transform: translateY(30px);
+  -webkit-transition: opacity 0.3s linear, -webkit-transform 0.2s linear;
+  transition: opacity 0.3s linear, transform 0.2s linear;
+}
+
+.loaded .team_slider__info.animate .team_slider__info_left,
+.loaded .team_slider__info.animate .team_slider__info_right {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+
+.loaded .team_slider__info.animate .team_slider__info_right {
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
 }
 
 .team_slider__list {
@@ -5418,6 +5482,22 @@ html.has-scroll-dragging {
 
 .team_clients__item {
   width: calc(25% - 30px);
+}
+
+.team_clients__item {
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+  transform: translateY(30px);
+  -webkit-transition: opacity 0.3s linear, -webkit-transform 0.2s linear;
+  transition: opacity 0.3s linear, transform 0.2s linear;
+}
+
+.loaded .team_clients__item.animate {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
 }
 
 .team_clients_block {
@@ -5506,6 +5586,19 @@ html.has-scroll-dragging {
   display: flex;
   flex-direction: column;
   gap: 40px;
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+  transform: translateY(30px);
+  -webkit-transition: opacity 0.3s linear, -webkit-transform 0.2s linear;
+  transition: opacity 0.3s linear, transform 0.2s linear;
+}
+
+.loaded .team_comments__item.animate {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
 }
 
 .team_comments__quotes {
@@ -5630,6 +5723,66 @@ html.has-scroll-dragging {
   border: 1px solid var(--text);
   -webkit-transition: -webkit-transform 0.2s linear, border 0.1s linear 0.2s;
   transition: transform 0.2s linear, border 0.1s linear 0.2s;
+}
+
+.team_comments__quotes,
+.team_comments__navigation {
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+  transform: translateY(30px);
+  -webkit-transition: opacity 0.3s linear, -webkit-transform 0.2s linear;
+  transition: opacity 0.3s linear, transform 0.2s linear;
+}
+
+.loaded .team_comments__buttons.animate .team_comments__quotes,
+.loaded .team_comments__buttons.animate .team_comments__navigation {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+
+.loaded .team_comments__buttons.animate .team_comments__navigation {
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+.team__top_head,
+.team__top_desc,
+.team__bottom_head,
+.team__bottom_desc,
+.team__bottom_heading,
+.team__bottom_description,
+.team__bottom_count {
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+  transform: translateY(30px);
+  -webkit-transition: opacity 0.3s linear, -webkit-transform 0.2s linear;
+  transition: opacity 0.3s linear, transform 0.2s linear;
+}
+
+.loaded .team__top_block.animate .team__top_head,
+.loaded .team__top_block.animate .team__top_desc,
+.loaded .team__bottom_info.animate .team__bottom_head,
+.loaded .team__bottom_info.animate .team__bottom_desc,
+.loaded .team__bottom_top.animate .team__bottom_heading,
+.loaded .team__bottom_top.animate .team__bottom_description,
+.loaded .team__bottom_bottom.animate .team__bottom_count,
+.loaded .team__bottom_bottom.animate .team__bottom_description {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+
+.loaded .team__top_block.animate .team__top_desc,
+.loaded .team__bottom_info.animate .team__bottom_desc,
+.loaded .team__bottom_top.animate .team__bottom_description,
+.loaded .team__bottom_bottom.animate .team__bottom_description {
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
 }
 
 /* end team */
@@ -7853,7 +8006,8 @@ html.has-scroll-dragging {
     height: 40px;
   }
   .header__nav_container {
-    padding: 60px 120px;
+    padding: 60px;
+    max-width: 1280px;
   }
   .main__border {
     width: calc(100% - 240px);
