--- a/css/style.css
+++ b/css/style.css
@@ -6572,9 +6572,6 @@ html.has-scroll-dragging {
 }
 
 .error_page img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -6583,6 +6580,18 @@ html.has-scroll-dragging {
   z-index: 1;
   object-fit: cover;
   object-position: bottom center;
+}
+
+.error_page img:nth-child(1),
+.dark .error_page img:nth-child(2) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.dark .error_page img:nth-child(1),
+.error_page img:nth-child(2) {
+  display: none;
 }
 
 .error_page__container {
@@ -6615,6 +6624,38 @@ html.has-scroll-dragging {
               0 0.4px 0.4px var(--bg),
               -0.4px 0 0.4px var(--bg),
               0 -0.4px 0.4px var(--bg);
+}
+
+.error_page__head,
+.error_page__desc,
+.error_page__button {
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+  transform: translateY(30px);
+  -webkit-transition: opacity 0.3s linear, -webkit-transform 0.2s linear;
+  transition: opacity 0.3s linear, transform 0.2s linear;
+  -webkit-transition-delay: 1s;
+  transition-delay: 1s;
+}
+
+.loaded .error_page__flex.animate .error_page__head,
+.loaded .error_page__flex.animate .error_page__desc,
+.loaded .error_page__flex.animate .error_page__button {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+
+.loaded .error_page__flex.animate .error_page__desc {
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+.loaded .error_page__flex.animate .error_page__button {
+  -webkit-transition-delay: 0.5s;
+  transition-delay: 0.5s;
 }
 
 /* end error_page */
@@ -7526,6 +7567,55 @@ html.has-scroll-dragging {
   width: 100%;
   max-height: 500px;
   object-fit: cover;
+}
+
+.article__heading {
+  opacity: 0;
+  position: relative;
+  top: 30px;
+  -webkit-transition: opacity 0.3s linear, top 0.2s linear;
+  transition: opacity 0.3s linear, top 0.2s linear;
+  -webkit-transition-delay: 1s;
+  transition-delay: 1s;
+}
+
+.loaded .article__info_block.animate .article__heading {
+  opacity: 1;
+  top: 0px;
+  -webkit-transition-delay: calc(var(--inc-step)*0.1s);
+  transition-delay: calc(var(--inc-step)*0.1s);
+}
+
+.article__head,
+.article__desc,
+.article__image {
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+  transform: translateY(30px);
+  -webkit-transition: opacity 0.3s linear, -webkit-transform 0.2s linear;
+  transition: opacity 0.3s linear, transform 0.2s linear;
+  -webkit-transition-delay: 1s;
+  transition-delay: 1s;
+}
+
+.loaded .article__info_flex.animate .article__head,
+.loaded .article__info_flex.animate .article__desc,
+.loaded .article__info_flex.animate .article__image {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+
+.loaded .article__info_flex.animate .article__desc {
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+.loaded .article__info_flex.animate .article__image {
+  -webkit-transition-delay: 0.5s;
+  transition-delay: 0.5s;
 }
 
 /* end article */
